--- a/golang-frontend.yml
+++ b/golang-frontend.yml
@@ -6,6 +6,9 @@
 trigger:
 - master
 
+pool:
+  vmImage: 'ubuntu-latest'
+
 steps:
 - task: GoTool@0
   inputs:
@@ -14,6 +17,8 @@ steps:
 - task: Go@0
   inputs:
     command: 'get'
+    argument: '-d'
+    workingDirectory: '$(System.DefaultWorkingDirectory)'
 
 - task: Go@0
   inputs:
