publish task added

--- a/golang-frontend.yml
+++ b/golang-frontend.yml
@@ -22,9 +22,19 @@ steps:
 
 - task: Go@0
   inputs:
-    command: 'build'
+    command: 'test'
+    arguments: '-v'
+    workingDirectory: '$(modulePath)'
 
 - task: Go@0
   inputs:
-    command: 'test'
-    arguments: '-v'
+    command: 'build'
+    workingDirectory: '$(System.DefaultWorkingDirectory)'
+
+- task: CopyFiles@2
+  inputs:
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+
+- task: PublishBuildArtifacts@1
+  inputs:
+     artifactName: drop
